--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "code_folding": [
      40,
@@ -14,41 +14,7 @@
      148
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 45000 Val: 5000\n",
-      "trainset 45000\n",
-      "==> creating preact_resnet\n",
-      "Total params: 0.47M\n",
-      "Epoch 0 Current LR 0.06\n",
-      "% y_tilde equal to noisy label 1.0\n",
-      "% y_tilde equal to true label 0.9\n",
-      "Train acc 0.359, Train auroc 0.819\n",
-      "Val acc 0.386, Val auroc 0.862\n",
-      "Epoch 1 Current LR 0.06\n",
-      "% y_tilde equal to noisy label 1.0\n",
-      "% y_tilde equal to true label 0.9\n",
-      "Train acc 0.530, Train auroc 0.898\n",
-      "Val acc 0.443, Val auroc 0.865\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-2bc161edd399>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    112\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpencil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 114\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    115\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m             \u001b[0mpencil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_y_tilde\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/good_env/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    105\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         \"\"\"\n\u001b[0;32m--> 107\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/good_env/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     91\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     92\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from resnet import resnet32\n",
     "from cifar import get_cifar10\n",
@@ -67,7 +33,7 @@
     "import numpy as np\n",
     "\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"6\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"2\"\n",
     "\n",
     "if True: # Define hyper parameters\n",
     "    epochs = 320\n",
@@ -108,6 +74,7 @@
     "        print('trainset',len(trainset))\n",
     "        trainloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size, shuffle=True, num_workers=4)\n",
     "        valloader = torch.utils.data.DataLoader(valset, batch_size=batch_size, shuffle=False, num_workers=4)\n",
+    "########## Model checkpointing commented out\n",
     "#         with open(temp_path+\"trainloader\"+\".pkl\", \"wb\") as file:\n",
     "#             pickle.dump(trainloader,file)\n",
     "#         with open(temp_path+\"valloader\"+\".pkl\", \"wb\") as file:\n",
@@ -118,7 +85,7 @@
     "#         with open(temp_path+\"valloader\"+\".pkl\", \"rb\") as file:\n",
     "#             valloader = pickle.load(file)\n",
     "\n",
-    "if True: # Define Model and training hyper parameters\n",
+    "if True: # Define Model and optimizer\n",
     "\n",
     "    # Model\n",
     "    print(\"==> creating preact_resnet\")\n",
@@ -128,11 +95,7 @@
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = optim.SGD(model.parameters(), lr=lr, momentum=momentum, weight_decay=weight_decay)\n",
     "\n",
-    "#     PENCIL\n",
-    "    pencil = pencil_lib.PENCIL(len(trainset), n_classes, pencil_epochs, pencil_lrs, \n",
-    "                                               pencil_alpha, pencil_beta, pencil_gamma, save_losses=True, use_KL=pencil_KL, K=pencil_K)\n",
-    "\n",
-    "if True: # Define dict and list for storing results\n",
+    "if True: # Define dict for storing results\n",
     "    results = {'train':None,'val':None}\n",
     "    metrics = ['acc','auprc','auroc','loss']\n",
     "    for subset in results.keys(): \n",
@@ -144,18 +107,22 @@
     "        item = trainset.__getitem__(i)\n",
     "        results['labels'].append(item[1])\n",
     "        results['true_labels'].append(item[3])\n",
+    "        \n",
+    "if True: # Define PENCIL\n",
+    "    pencil = pencil_lib.PENCIL(torch.tensor(results['labels']), len(trainset), n_classes, pencil_epochs, pencil_lrs, \n",
+    "                                               pencil_alpha, pencil_beta, pencil_gamma, save_losses=True, use_KL=pencil_KL, K=pencil_K)\n",
     "\n",
-    "if start_epoch>0: # Load checkpoint data\n",
-    "    model.load_state_dict(torch.load(temp_path+'epoch'+str(start_epoch)))\n",
-    "    with open(temp_path+\"results\"+str(start_epoch)+\".pkl\", \"rb\") as file:\n",
-    "        results = pickle.load(file)\n",
-    "    with open(temp_path+\"pencil\"+str(start_epoch)+\".pkl\", \"rb\") as file:\n",
-    "        pencil = pickle.load(file)\n",
-    "    pencil.alpha=pencil_alpha\n",
-    "    pencil.beta=pencil_beta\n",
+    "########## Model checkpointing commented out\n",
+    "# if start_epoch>0: # Load checkpoint data\n",
+    "#     model.load_state_dict(torch.load(temp_path+'epoch'+str(start_epoch)))\n",
+    "#     with open(temp_path+\"results\"+str(start_epoch)+\".pkl\", \"rb\") as file:\n",
+    "#         results = pickle.load(file)\n",
+    "#     with open(temp_path+\"pencil\"+str(start_epoch)+\".pkl\", \"rb\") as file:\n",
+    "#         pencil = pickle.load(file)\n",
+    "#     pencil.alpha=pencil_alpha\n",
+    "#     pencil.beta=pencil_beta\n",
     "    \n",
     "for epoch in range(start_epoch,epochs):\n",
-    "    \n",
     "    if True: # Train \n",
     "        pencil.set_lr(optimizer, epoch)\n",
     "        model.train()\n",
@@ -198,7 +165,7 @@
     "        for result in val_results.keys():\n",
     "            results['val'][result].append(val_results[result])\n",
     "\n",
-    "    if True: # print results \n",
+    "    if True: # Print results \n",
     "        print('Epoch', epoch, 'Current LR', round(optimizer.param_groups[0]['lr'],5))\n",
     "        if epoch>=pencil_epochs[0]:\n",
     "            print('Percent of estimated labels that have remained the same since end of phase 1',round(sum(np.argmax(results['pencil_labels'][0],axis=1)==np.argmax(pencil.y_tilde,axis=1))/len(results['pencil_labels'][0]),4))\n",
@@ -206,7 +173,8 @@
     "        print('% y_tilde equal to true label',results['pencil_label_correct'][-1])\n",
     "        print('Train acc %.3f, Train auroc %.3f' % (results['train']['acc'][-1], results['train']['auroc'][-1]))\n",
     "        print('Val acc %.3f, Val auroc %.3f' % (results['val']['acc'][-1], results['val']['auroc'][-1]))                                                                 \n",
-    "         \n",
+    "\n",
+    "########## Model checkpointing commented out\n",
     "#     if checkpoint!=None and (epoch%checkpoint==0 or epoch+1 in pencil_epochs): #Save model for this epoch\n",
     "#         if epoch%checkpoint==0 and epoch>start_epoch+checkpoint: \n",
     "#             os.remove(temp_path+'epoch'+str(epoch-checkpoint))\n",
@@ -225,6 +193,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
